--- a/Latex/src.bib
+++ b/Latex/src.bib
@@ -1,21 +1,7 @@
-@misc{PCA,
-    author    = {Mark Richardson},
-    title     = {Principal Component Analysis},
-	year = {2009}
-}
-
-@misc{faceRec,
-    author    = {Kyungnam Kim},
-    title     = {Face Recognition using Principle Component
-Analysis},
-	institution = {Department of Computer Science, University of Maryland, College Park MD 20742, USA},
-}
-
-@article{chiwawa,
-author = {Mario I. Chacon M. and Pablo Rivas P. and and Graciela Ramirez A.},
-title = {Fuzzy Clustering Approach for Face Recognition Based on Face Feature Lines and Eigenvectors},
-journal = {Engineering Letters},
-year = {2007},
+@misc{deut1,
+    author    = {P. DEUTSCH},
+    title     = {RFC1951, DEFLATE Compressed Data Format Specification version 1.3},
+	year = {1996}
 }
 
 @article{knuth1,
