--- a/Latex/lz77.tex
+++ b/Latex/lz77.tex
@@ -1,8 +1,8 @@
 \section{The LZ77 Algorithm} \label{sec:lz77}
-In this section we provide a short overview of the dictionary-based compression algorithm presented by Abrham Lempel and Jacob Ziv in 1977 \cite{ziv1}. The aim of this algorithm is trying to reduce the redundancy due to similar sequence repeating along the message. What it does is basically checking if a certain piece of the sequence has already been found in the past and, if it is the case, we code the whole piece with a reference to the previous alike sequence.
+In this section we provide a short overview of the dictionary-based compression algorithm presented by Abrham Lempel and Jacob Ziv in 1977 \cite{ziv1}. The aim of this algorithm is trying to reduce the redundancy due to similar sequence repeated along the message. What it does is basically checking if a certain piece of the sequence has already been found in the past and, if it is the case, we code the whole piece with a reference to the previous alike sequence.
 
 \subsection{The algorithm} \label{subsec:lz77alg}
-The algorithm works with two adjacent windows shifting on the right during the coding of the message. The first window is the \textit{searching window} and has length $L_s$; the second one is the \textit{coding window} and has length $L_c$. We want to find a match between any prefix of the \textit{coding window} and a sequence contained in the overall window given by the juxtapposition of the \textit{searching window} and the \textit{coding window}, i.e. it is sufficient that only the first symbol of the match belongs to the \textit{searching window}, while the matched pattern can stretch in through the \textit{coding window} itself. The window lengths $L_s$ and $L_c$ are two parameters of the algorithm and their choice strongly influences the compression performances, we will see how in the last part of this report.
+The algorithm works with two adjacent windows shifting on the right during the coding of the message. The first window is the \textit{searching window} and has length $L_s$; the second one is the \textit{coding window} and has length $L_c$. We want to find a match between any prefix of the \textit{coding window} and a sequence contained in the overall window given by the juxtapposition of the \textit{searching window} and the \textit{coding window}, i.e. it is sufficient that only the first symbol of the match belongs to the \textit{searching window}, while the matched pattern can stretch in through the \textit{coding window} itself. The window lengths $L_s$ and $L_c$ are two parameters of the algorithm and their choice strongly influences the compression performances, we will see how in the following part of this report.
  
 Once we have found a match between a prefix of the \textit{coding window} and another piece of message, we code it as a triplet (\textit{offset}, \textit{length}, \textit{symbol}) where:
 \begin{itemize}
@@ -24,19 +24,19 @@ In the following paragraphs we will present our own implementation in Matlab of 
 \subsubsection{Basic Coding Algorithm} \label{subsubsec:basiclz77}
 First of all we choose a file and write it as a sequence of bytes (\texttt{uint8} in Matlab). We assume this is the original message, whose alphabet is made of all the possible combinations of $8$ bits and has size $M = 2^8 = 256$. The first symbol of the sequence is encoded as a single symbol directly, because placing the \textit{coding window} in the first positions makes no sense, since we would have no \textit{searching window} to exploit. Then, the \textit{coding window} starts from the second position of the sequence and, until there are at least $L_s$ symbols before it, the \textit{searching window} is shrunk to fit into the available positions. The same thing happens to the \textit{coding window} when we are reaching the end of the file: if less than $L_c$ symbols are left, we use a shorter \textit{coding window}. Note that, in order to always have a symbol to insert in the \textit{symbol} field of the last triplet, near the end of the file the \textit{coding window} is shrunk such that the last symbol of the stream is left out.
 
-Once the dictionary has been created, we want to write it using the least amount of memory we can. Since the values of $L_s$ and $L_c$ are fixed and determine the maximum values for the fields \textit{offset} and \textit{length} and we know that a symbol is represented with a single byte, we can evaluate the maximum number of bits to use for each triplet as:
+Once the dictionary has been created, we want to write it using the least amount of memory we can. Since the values of $L_s$ and $L_c$ are fixed and they determine the maximum values for the fields \textit{offset} and \textit{length} and we know that a symbol is represented with a single byte, we can evaluate the maximum number of bits to use for each triplet as:
 \begin{align}
 l_{offset} &= \left \lceil log_2L_s \right \rceil \text{bits} \\
 l_{length} &= \left \lceil log_2L_c \right \rceil \text{bits} 
 \end{align}
 
-We use exactly $l_{offset} + l_{length} + 8$ bits for each triplet. Once we have created a sequence of bits by lining up all the rows of the dictionary, we can split it in blocks of $8$ bits and code it as a sequence of bytes. To let the receiver know how many bits represent each element of the triplet, we attach in front of the stream three bytes: the first indicating the number of bits related to the \textit{offset}, the second related to the \textit{lenght} and the third to the \textit{symbol}. One may argue that, with a single byte, we can referring only to values smaller than $2^8 = 256$; this is true, but, for our purposes, a byte is more than sufficient: suppose we need $200$ bits to represent the \textit{offset} in a triplet; this means that our \textit{searching window} is almost $2^{200}$ bits long, that is around $2 \times 10^{50}$ Gigabytes, of course absolutely useless for ordinary files. At the receiver side the user inspects the first three bytes to retrieve the number of bits dedicated to each component of the triplet. Then, after looking at the message as a stream of bits, it can group together the triplets of the dictionary by exploiting the information just got. This explains also why we cannot use less than $3$ bytes to express the dimension of one triplet: since the \textit{byte} is the fundamental unity of memory in every computer, we are sure that every user is able to get the initial information and thus decoding the dictionary. 
+We use exactly $l_{offset} + l_{length} + 8$ bits for each triplet. After creating a sequence of bits by lining up all the rows of the dictionary, we can split it in blocks of $8$ bits and code it as a sequence of bytes. To let the receiver know how many bits represent each element of the triplet, we attach in front of the stream three bytes: the first indicating the number of bits related to the \textit{offset}, the second related to the \textit{lenght} and the third to the \textit{symbol}. One may argue that, with a single byte, we can referring only to values smaller than $2^8 = 256$; this is true, but, for our purposes, a byte is more than sufficient: suppose we need $200$ bits to represent the \textit{offset} in a triplet; this means that our \textit{searching window} is almost $2^{200}$ bits long, that is around $2 \times 10^{50}$ Gigabytes, of course absolutely useless for ordinary files. At the receiver side the user inspects the first three bytes to retrieve the number of bits dedicated to each component of the triplet. Then, after looking at the message as a stream of bits, it can group together the triplets of the dictionary by exploiting the information just got. This explains also why we cannot use less than $3$ bytes to express the dimension of one triplet: since the \textit{byte} is the fundamental unity of memory in every computer, we are sure that every user is able to get the initial information and thus properly decoding the dictionary. 
 
 \subsubsection{Version 1: Basic}
-As previously mentioned, the several versions of the algorithms differ by the pattern matching technique to find the \textit{coding window} inside the \textit{searching window}. The first, basic, version of the program executes the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is larger than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
+As previously mentioned, the many versions of the algorithms differ by the pattern matching technique to find the \textit{coding window} inside the \textit{searching window}. The first, basic, version of the program executes the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is larger than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
 
 \subsubsection{Version 2: KMP}
-A first improvement has been brought by using the KMP (Knuth-Morris-Pratt) pattern mathcing algorithm \cite{knuth1}. This algorithm is optimum for the research of a pattern inside a string: it takes a time $\mathcal{O}(n + k)$, where $n$ is the length of the pattern and $k$ is the length of the string. We though about using the KMP algorithm where the pattern $\mathbf{c}$ is the \textit{coding window} and the overall string $[\mathbf{s}, \mathbf{c}]$ is the \textit{search window} concatenated with the \textit{coding window}.
+A first improvement has been brought by using the KMP (Knuth-Morris-Pratt) pattern matching algorithm \cite{knuth1}. This algorithm is optimum for the research of a pattern inside a string: it takes a time $\mathcal{O}(n + k)$, where $n$ is the length of the pattern and $k$ is the length of the string. We thought about using the KMP algorithm where the pattern $\mathbf{c}$ is the \textit{coding window} and the overall string $[\mathbf{s}, \mathbf{c}]$ is the \textit{searching window} concatenated with the \textit{coding window}.
 
 The KMP algorithm starts with the brute force approach, comparing the first character of the pattern with each character of the string, but it allows to improve performances in pattern matching because, thanks to previous failed matches, it realizes when it is possible to jump ahead and discard some trials, which will surely fail. We used the "jump mechanism" of KMP to realize a second version of the program, but the time performances keep remaining very poor, due to the many nested cycles we have to use, which are not very fast to be executed in Matlab. Moreover, each different pattern needs a \textit{matching function} to be computed, which increases the number of necessary computations.
 
