--- a/Latex/lz77.tex
+++ b/Latex/lz77.tex
@@ -47,3 +47,6 @@ The term \textit{optimistic} refers to the order in which we take different patt
 
 \subsubsection{Version 4: pessimistic \texttt{strfind()}} \label{subsubsec:pess}
 From an empirical point of view we found that we often have not many long matches and hence the \textit{optimistic} approach is not very suitable. The \textit{pessimistic} approach consists in starting to look for a match with the shortest possible prefix of the \textit{coding window} and executing the pattern matching through \texttt{strfind()} until we find no more matches. In this case we consider the previous match, which is the longest one, to build the current triplet. If there are no matches we know it from the first iteration and this allows us to save a lot of time. Quite all the results presented in the following have been obtained with this version of the program.
+\\
+
+A further improvement we thought about, but we did not implemented, is using a sort of bisectional approach to find the longest match: we first try to search the first character of the \textit{coding window}; if we do not find it, this means that there is no other matches, otherwise we look for the entire look-ahead buffer. Again, if a match with the whole \textit{coding window} is found, we stop searching, otherwise we try with the first two symbols of the buffer and so on. The idea is keeping searching a longer buffer at one step, starting with length $1$, and a shorter buffer at the successive step, starting with the entire \textit{searching window}. This method is worse than the previous ones if we already know whether the file is higly or poorly redundant, but, in case of a completely unknown file, it allows to save about half of the computational time. Since in our experience processing time was not a strong constraint and we perfectly know what kind of files we are dealing with, we did not realize this implementation, choosing, time by time, the most suitable version between the optimistic and pessimistic approach.
