--- a/Latex/windows.tex
+++ b/Latex/windows.tex
@@ -178,7 +178,8 @@ We decided to draw it only for two files, ;
 \end{figure}
 \end{center}
 
-Two main things can be noticed from the above graphs. First of all we have a confirmation taht the LZSS works in general better than the LZ77, as a matter of fact plots related to the LZSS lie below the corresponding LZ77 plots. The second, and most relevant information, links the window sizes with with the compression performances: we can see that a short \textit{coding window} is more advisable than a large one, while large \textit{searching windows} improve the compression ratio by a considerable factor. It is intuitive that large \textit{searching windows} are better, because, if we consider a long sequence of symbols, it is more likely that some patterns are repeated; on the other hand, increasing the \textit{coding window} does not improve...............................????????????????????????????????????????????????????????
+Two main things can be noticed from the above graphs. First of all we have a confirmation that the LZSS works in general better than the LZ77, as a matter of fact plots related to the LZSS lie below the corresponding LZ77 plots. The second, and most relevant information, links the window sizes with the compression performances: it is intuitive that large \textit{searching windows} are more suitable, because, if we consider a long sequence of symbols, finding some repeated patterns is more likely; on the other hand, and this could be less intuitive, increasing the \textit{coding window} is not very advisable: it is clear that a too short \textit{coding window} is not a good deal, because we risk to encode a unique, long pattern with more pairs (\textit{offset}, \textit{length}) than necessary. But why should enlarging it be even worse? The reason is that, in common files as the ones we used for the experience, repeated patterns are never very long, therefore having a huge \textit{coding window} does not represent a profit, in fact we need many bits to represent the \textit{length} field. To conclude, even though performances depend on the kind of file we are trying to compress, we should prefer a quite short \textit{coding window} and a large \textit{searching window}, being careful that this choice may affect time performances.
+
 
 %It is easy to see that performances tends to improve with the growing of the \textit{searching window}. We could expect such a result: with shorter windows it is more difficult to find repeated pattern to refer to and, in some cases, we could neither realize that such patterns are present in the message. For a highly redundant input stream a long window allows to encode at the same time much more repetitions; even though the number of bits needed to represent a wide range of values grows with the increasing of the window, this happens with a logarithmic trend, while the amount of space used to encode a sequence byte per byte grows linearly. Clearly the usage of large windows implies a drop of performances from a computational time point of view. 
 %In the best compression scenario, we would like to have a \textit{search window} as long as the message itself, but, since this is not suitable for time reason, commercial softwares usually work with block of symbols $32$ Kbyte long with windows of
