--- a/Latex/final_report_src_coding.tex
+++ b/Latex/final_report_src_coding.tex
@@ -23,7 +23,7 @@
 \headsep=0.25in 
 \linespread{1.1}	% spazio tra le linee
 
-
+\pagestyle{fancy}
 \newcommand{\hmwkAuthorName}{Tommaso Martini - 1081580}
 \lhead{LZ77 and LZSS Algorithms} % Top left header
 \rhead{\hmwkAuthorName} % Top right header
@@ -46,7 +46,7 @@
 
 \input{comparison.tex}
 
-%\input{results.tex}
+\input{results.tex}
 
 \bibliographystyle{plain}
 \bibliography{src}
